--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -69,17 +69,14 @@
                     <li class="nav-item">
                         <a class="nav-link " href="">Home </a>    
                     </li>
-                    
+                    <li class="nav-item">
+                        <a class="nav-link " href="/allProducts">All Products </a>    
+                    </li>
                     
                     
                     <li class="nav-item">
-                        <a class="nav-link" href="/categories">Category<i class="far fa-angle-down"></i></a>
-                        <ul class="droap_menu">
-                            <li><a href="/products">Mobiles</a></li>
-                            <li><a href="">Head set</a></li>
-                            <li><a href="">Laptop</a></li>
-                           
-                        </ul>
+                        <a class="nav-link" href="/categories">Category<i class=""></i></a>
+                        
                     </li>
                     
                     <li class="nav-item">
