--- a/views/users/orderDetails.ejs
+++ b/views/users/orderDetails.ejs
@@ -29,8 +29,9 @@
                                                            <%if(order.orderStatus==='Cancelled'||order.orderStatus==='Returned'){%>
                                                     <h5 style="color: red;" id="returnOrdermessage">OrderStatus: <%=order.orderStatus%></h5>
                                                     <%}else{%>
-                                                        <h6 style="color: rgb(25, 0, 255);" id="returnOrdermessage">OrderStatus: <%=order.orderStatus%></h6>
+                                                        <h6 style="color: rgb(25, 0, 255);" id="returnOrderStatus">OrderStatus: <%=order.orderStatus%></h6>
                                                         <%}%>
+                                                        <h6 id="ordStatus"></h6>
                                             </div>
                                             <div class="header_address">
                                                 <p><b>invoice no: </b><span>001</span></p>
@@ -90,7 +91,7 @@
                                                                 <%}%>
                                                             <%})%>
                                                             <%} else{ %>
-                                                                <td><h5 id="cancelStatus" style="color: red;"></h5></td> 
+                                                                <td><h5 id="cancelStatusmsg" style="color: red;"></h5></td> 
                                                                 <%}%>
                                                         </tr>
                                                        <%})%>
@@ -191,7 +192,7 @@
         console.log(orderId);
 
         Swal.fire({
-        title:'Are you sure you want to cancel order?',
+        title:'Are you sure you want to cancel the product?',
         icon:'warning',
         showCancelButton:true,
         confirmButtonColor:'#008000',
@@ -217,8 +218,8 @@
               .then(data => {
                 if(data){
                     console.log(data.total);
-                //   document.getElementById('newTotal').innerText = `Rs:${data.total}`
-                  window.location.reload()
+                  document.getElementById('newTotal').innerText = `Rs:${data.total}`
+                
                   document.getElementById("cancelStatus").textContent = 'Cancelled'
                  
 
@@ -301,21 +302,18 @@
                 })
                })
                .then((res)=> res.json())
-               .then((data)=>{
-                    console.log(data);
-                document.getElementById("cancelEachbtn").style.display = 'none'  
-
-                  Swal.fire({
+               .then(data=>{
+                    if(data){
+                document.getElementById("cancelEachbtn").style.display = 'none' 
+                document.getElementById("returnButton").style.display='none'
+                document.getElementById('returnOrderStatus').innerText = 'cancelled' 
+                   Swal.fire({
               title: 'Order Cancelled',
               icon: 'success',
               confirmButtonColor: '#3085d6',
               confirmButtonText: 'OK'
             })
-            .then(()=>{
-                // window.location.reload()
-                // document.getElementById('returnButton').style.display='none'
-                
-            })
+        } 
 
           })
                .catch((error)=> console.log(error))
@@ -332,7 +330,7 @@ let order = '<%= JSON.stringify(orders) %>'
         document.getElementById('cancelEachbtn').style.display='none'
 
        }
-       document.getElementById('hello').style.display = 'none'
+       
 
     })
 </script>
