--- a/views/users/wallet.ejs
+++ b/views/users/wallet.ejs
@@ -10,8 +10,10 @@
                             <h4>Total Wallet Balance Rs: <%=totalWallet%>
                             </h4>
                             <br>
+                            <%if(walletHistory.length>0){%>
                             <div class="fp_dashboard_order">
                                 <div class="table-responsive">
+                                   
                                     <table class="table" id="walletHis">
                                       <thead>
                                             <tr class="t_header">
@@ -23,6 +25,7 @@
                                             </tr>
                                         </thead>
                                             <tbody>
+                                                
                                             <%walletHistory.forEach((history,index)=>{%>
                                                 <tr>
                                                     <td>
@@ -61,8 +64,12 @@
 
                                         </tbody>
                                     </table>
+                                    
                                 </div>
                             </div>
+                            <%} else {%>
+                                <h5>Your wallet transaction is empty</h5>
+                                <%}%>
                             
                             
                         </div>
