--- a/views/users/wishlist.ejs
+++ b/views/users/wishlist.ejs
@@ -21,6 +21,7 @@
                                                         <th>Image</th>
                                                         <th>Price</th>
                                                         <th>AddToCart</th>
+                                                        <th>View details</th>
                                                         <th>Remove</th>
                                                     </tr>
                                                     <%products.forEach(product=>{%>
@@ -37,10 +38,11 @@
                                                       
                                                             
                                                             
-                                                        <td><a onclick="addToCart('<%=product._id%>')">Addtocart</a></td>
+                                                        <td><button class="btn btn-primary" onclick="addToCart('<%=product._id%>')">Addtocart</button></td>
 
+                                                        <td><button class="btn btn-primary" onclick="viewProduct('<%=product._id%>')">View Product</button></td>
                                                         
-                                                        <td><a onclick="removeWishlist('<%=product._id%>')">Remove</a></td>
+                                                        <td><button class="btn btn-danger" onclick="removeWishlist('<%=product._id%>')">Remove</button></td>
                                                     </tr>
                                                  <%})%>
 
@@ -61,55 +63,7 @@
     </div>
 </section>
 
-<script>
-    const addToCart =(proId)=>{
-        fetch("/addToCart", {
-            method:"post",
-            headers:{
-                "Content-Type":"application/json"
-            },
-            body:JSON.stringify({
-                productid:proId
-            })
-        })
-        .then((res)=>res.json())
-        .then((res)=>{
-            window.location.reload()
-        })
-        .catch((error)=>console.log(error))
-    }
-
-    const removeWishlist =(productId)=>{
-        Swal.fire({
-      title:'Are you sure you want to remove from wishlist?',
-      icon:'warning',
-      showCancelButton:true,
-      confirmButtonColor:'#3085d6',
-      cancelButtonColor: '#d33',
-      confirmButtonText: 'Yes!',      
-    })
-    .then((result)=>{
-        if(result.isConfirmed){
-            fetch("/removeFromWishlist", {
-                method:'post',
-                headers:{
-                    'Content-Type':'application/json'
-                },
-               body:JSON.stringify({
-                productId
-               })
-            })
-            .then((res)=>res.json())
-            .then((res)=>{
-                if(res==="success"){
-                    window.location.reload()
-                }
-            })
-            .catch((error)=>console.log(error))
-        }
-    })
-    }
-</script>
+<script src="/js/users/wishlist.js"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.16/dist/sweetalert2.all.min.js"></script>
 
