--- a/views/admin/listOrders.ejs
+++ b/views/admin/listOrders.ejs
@@ -175,7 +175,7 @@
 
                                                                     <td>
                                                                         <h6>
-                                                                            <%=orders[i].costumer.name%>
+                                                                            <%=orders[i].costumer?.name%>
                                                                         </h6>
                                                                     </td>
                                                                     <td>
